--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <input type="text" id="youtubeSearch" placeholder="Search YouTube">
 <button onclick="searchYouTube(true)">Search Youtube</button>
-<div id="youtubeResults" style="max-height: 400px; overflow-y: auto; margin-top: 20px; width: 90%; border: 1px solid #ccc; padding: 10px; border-radius: 8px; background-color: black;"></div>
+<div id="youtubeResults" style="max-height: 400px; overflow-y: auto; margin-top: 20px; width: 90%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;"></div>
 <div id="youtubeLoading" style="display: none; margin-top: 10px; font-size: 16px;">Loading more results...</div>
 
 <h2 id="youtubeTitle" style="font-size: 20px; margin-top: 10px;"></h2>
