user api input fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </label>
 <hr style="width: 90%; margin-top: 30px;">
 
-<input type="text" id="userApiInput" placeholder="Enter Your Google API Key Here (YouTube Data API v3)">
+<input type="text" id="userApiInput" placeholder="Enter Your Google API Key Here (YouTube Data API v3)" style="width: 90%;">
 <input type="text" id="youtubeSearch" placeholder="Search YouTube">
 <button onclick="searchYouTube(true)">Search Youtube</button>
 <div id="youtubeResults" style="max-height: 400px; overflow-y: auto; margin-top: 20px; width: 90%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;"></div>
