--- a/standalone.html
+++ b/standalone.html
@@ -95,6 +95,18 @@ iframe {
   flex-wrap: nowrap;
   justify-content: center;
 }
+
+#youtubeResults {
+  max-height: 400px;
+  overflow-y: auto;
+  margin-top: 20px;
+  width: 90%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 8px;
+  background: var(--bg-secondary, #4e4e4e);
+}
+
 </style>
 </head>
 <body>
@@ -118,7 +130,18 @@ iframe {
   <input type="checkbox" id="themeToggle">
   Light Theme
 </label>
-  <script>
+<hr style="width: 90%; margin-top: 30px;">
+
+<input type="text" id="userApiInput" placeholder="Enter Your Google API Key Here (YouTube Data API v3)" style="width: 90%;">
+<input type="text" id="youtubeSearch" placeholder="Search YouTube">
+<button onclick="searchYouTube(true)">Search Youtube</button>
+<div id="youtubeResults" style="max-height: 400px; overflow-y: auto; margin-top: 20px; width: 90%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;"></div>
+<div id="youtubeLoading" style="display: none; margin-top: 10px; font-size: 16px;">Loading more results...</div>
+
+<h2 id="youtubeTitle" style="font-size: 20px; margin-top: 10px;"></h2>
+<iframe id="youtubePlayer" style="width: 90vw; max-width: 1000px; height: 500px; margin-top: 20px;" frameborder="0" allowfullscreen></iframe>
+
+<script>
 async function fetchImdbID(title, isMovie) {
   const apiKey = 'd0004590';
   const type = isMovie ? 'movie' : 'series';
@@ -182,6 +205,106 @@ themeToggle.addEventListener('change', () => {
     localStorage.setItem('theme', 'dark');
   }
 });
+
+let nextPageToken = null;
+let currentQuery = '';
+let isLoading = false;
+
+
+const YOUTUBE_API_KEY = document.getElementById('userApiInput');
+
+const loadingIndicator = document.getElementById('youtubeLoading');
+
+async function searchYouTube(initial = true) {
+  const resultsContainer = document.getElementById('youtubeResults');
+  const apiKey = document.getElementById('userApiInput').value.trim();
+
+  if (!apiKey) {
+    alert("Please enter your YouTube Data API key.");
+    return;
+  }
+
+  if (initial) {
+    currentQuery = document.getElementById('youtubeSearch').value.trim();
+    resultsContainer.innerHTML = ''; // Clear old results
+    nextPageToken = null;
+  }
+
+  if (!currentQuery || isLoading) return;
+
+  isLoading = true;
+  loadingIndicator.style.display = 'block';
+
+  const apiURL = `https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=6&q=${encodeURIComponent(currentQuery)}&key=${apiKey}${nextPageToken ? `&pageToken=${nextPageToken}` : ''}`;
+
+  try {
+    const res = await fetch(apiURL);
+    const data = await res.json();
+
+    nextPageToken = data.nextPageToken || null;
+    isLoading = false;
+    loadingIndicator.style.display = 'none';
+
+    if (!data.items || data.items.length === 0) {
+      if (initial) resultsContainer.innerHTML = '<p>No results found.</p>';
+      return;
+    }
+
+    data.items.forEach(item => {
+      const videoId = item.id.videoId;
+      const title = item.snippet.title;
+      const thumbnail = item.snippet.thumbnails.medium.url;
+      const channel = item.snippet.channelTitle;
+
+      const resultDiv = document.createElement('div');
+      resultDiv.className = 'youtube-result';
+      resultDiv.style = 'cursor: pointer; display: flex; align-items: center; gap: 15px; margin-bottom: 15px;';
+
+      resultDiv.innerHTML = `
+        <img src="${thumbnail}" alt="Thumbnail" width="160" height="90" style="border-radius: 8px;">
+        <div>
+          <strong>${title}</strong><br>
+          <small>${channel}</small>
+        </div>
+      `;
+
+      resultDiv.onclick = () => {
+        document.getElementById('youtubePlayer').src = `https://www.youtube.com/embed/${videoId}`;
+        document.getElementById('youtubeTitle').innerText = title;
+        window.scrollTo({ top: document.getElementById('youtubePlayer').offsetTop, behavior: 'smooth' });
+      };
+
+      resultsContainer.appendChild(resultDiv);
+    });
+  } catch (err) {
+    console.error(err);
+    isLoading = false;
+    loadingIndicator.style.display = 'none';
+    if (initial) resultsContainer.innerHTML = '<p>Error loading search results.</p>';
+  }
+}
+
+
+document.getElementById('youtubeResults').addEventListener('scroll', function () {
+  const container = this;
+  if (container.scrollTop + container.clientHeight >= container.scrollHeight - 50) {
+    // Near bottom
+    searchYouTube(false);
+  }
+});
+
+let scrollTimeout;
+document.getElementById('youtubeResults').addEventListener('scroll', function () {
+  if (scrollTimeout) clearTimeout(scrollTimeout);
+  scrollTimeout = setTimeout(() => {
+    const container = this;
+    if (container.scrollTop + container.clientHeight >= container.scrollHeight - 50) {
+      searchYouTube(false);
+    }
+  }, 150);
+});
+
 </script>
+
 </body>
 </html>
