--- a/index.html
+++ b/index.html
@@ -1,42 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="code.js" defer></script>
-</head>
-<body>
-	
-<input type="text" id="showInput" placeholder="Show or Movie name">
-<br>
-<label>
-  <input type="checkbox" id="modeToggle">
-  Movie Mode
-</label>
-<br>
-<div id="tvControls">
-  <input type="text" id="seasonInput" placeholder="Season">
-  <input type="text" id="episodeInput" placeholder="Episode">
-</div>
-<button onclick="start()">Find</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="code.js" defer></script>
+  </head>
+  <body>
+    <input type="text" id="showInput" placeholder="Show or Movie name" />
+    <br />
+    <label>
+      <input type="checkbox" id="modeToggle" />
+      Movie Mode
+    </label>
+    <br />
+    <div id="tvControls">
+      <input type="text" id="seasonInput" placeholder="Season" />
+      <input type="text" id="episodeInput" placeholder="Episode" />
+    </div>
+    <button onclick="start()">Find</button>
 
-<iframe id="showDisplay" style="width: 100%; height: 500px;" frameborder="0" referrerpolicy="origin" allowfullscreen></iframe>
+    <iframe
+      id="showDisplay"
+      style="width: 100%; height: 500px"
+      frameborder="0"
+      referrerpolicy="origin"
+      allowfullscreen
+    ></iframe>
 
-<label>
-  <input type="checkbox" id="themeToggle">
-  Light Theme
-</label>
-<hr style="width: 90%; margin-top: 30px;">
+    <label>
+      <input type="checkbox" id="themeToggle" />
+      Light Theme
+    </label>
+    <hr style="width: 90%; margin-top: 30px" />
 
-<input type="password" id="userApiInput" placeholder="Enter Your Google API Key Here (YouTube Data API v3)" style="width: 90%;">
-<input type="text" id="youtubeSearch" placeholder="Search YouTube">
-<button onclick="searchYouTube(true)">Search Youtube</button>
-<div id="youtubeResults" style="max-height: 400px; overflow-y: auto; margin-top: 20px; width: 90%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;"></div>
-<div id="youtubeLoading" style="display: none; margin-top: 10px; font-size: 16px;">Loading more results...</div>
+    <input
+      type="password"
+      id="userApiInput"
+      placeholder="Enter Your Google API Key Here (YouTube Data API v3)"
+      style="width: 90%"
+    />
+    <input type="text" id="youtubeSearch" placeholder="Search YouTube" />
+    <button onclick="searchYouTube(true)">Search Youtube</button>
+    <div
+      id="youtubeResults"
+      style="
+        max-height: 400px;
+        overflow-y: auto;
+        margin-top: 20px;
+        width: 90%;
+        border: 1px solid #ccc;
+        padding: 10px;
+        border-radius: 8px;
+      "
+    ></div>
+    <div
+      id="youtubeLoading"
+      style="display: none; margin-top: 10px; font-size: 16px"
+    >
+      Loading more results...
+    </div>
 
-<h2 id="youtubeTitle" style="font-size: 20px; margin-top: 10px;"></h2>
-<iframe id="youtubePlayer" style="width: 90vw; max-width: 1000px; height: 500px; margin-top: 20px;" frameborder="0" allowfullscreen></iframe>
-
-</body>
+    <h2 id="youtubeTitle" style="font-size: 20px; margin-top: 10px"></h2>
+    <iframe
+      id="youtubePlayer"
+      style="width: 90vw; max-width: 1000px; height: 500px; margin-top: 20px"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
+  </body>
 </html>
