--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       Light Theme
     </label>
     <hr style="width: 90%; margin-top: 30px" />
-
+    <br />
+    <br />
+    <h1 id="youtubeSectionText" onclick="youtubeTextMouseClick()">Youtube</h1>
     <input
       type="password"
       id="userApiInput"
@@ -70,3 +72,4 @@
     ></iframe>
   </body>
 </html>
+
