--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <hr style="width: 90%; margin-top: 30px" />
     <br />
     <br />
+    <div>
     <h1 id="youtubeSectionText" onclick="youtubeTextMouseClick()">Youtube</h1>
     <input
       type="password"
@@ -70,5 +71,6 @@
       frameborder="0"
       allowfullscreen
     ></iframe>
+    </div>
   </body>
 </html>
