--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <hr style="width: 90%; margin-top: 30px" />
     <br />
     <br />
-    <div>
+    <div class='hidden'>
     <h1 id="youtubeSectionText" onclick="youtubeTextMouseClick()">Youtube</h1>
     <input
       type="password"
