--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       id="showDisplay"
       style="width: 100%; height: 500px"
       frameborder="0"
-      referrerpolicy="origin"
+      referrerpolicy="no-referrer"
       allowfullscreen
     ></iframe>
   </body>
