--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <input type="text" id="showInput" placeholder="Show or Movie name" /><label>
     <input type="checkbox" id="modeToggle" />Movie Mode</label>
     <div id="tvControls">
-      <input type="text" id="seasonInput" placeholder="Season" />
-      <input type="text" id="episodeInput" placeholder="Episode" />
+      <input type="number" id="seasonInput" placeholder="Season" />
+      <input type="number" id="episodeInput" placeholder="Episode" />
     </div>
     <label><input type="checkbox" id="themeToggle" />Light Theme</label>
     <button onclick="start()">Find</button>
