added a show to quick find
added demon slayer to the quick find list

previously added: 
family guy
upload
the rookie
carmen sandiego
kpop demon hunters
starwars ep4: a new hope
kingsman: the secret service
bladerunner:2049

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
     <br>
     <button id="optionsButton" onclick="quickFind()">Quick Find</button>
     <div class="hidden" id="quickFindOptionsDiv">
-      <h2 id="divchildshowtextparent">shows (click) →</h2>
-      <div id="divchildshows" class="hidden">
+      <h2 id="divchildshowtextparent">shows (click) ↓</h2>
+      <div id="divchildshows">
       <img id="familyguyposter" src="showImages/familyguyposter.jpg" onclick="quickFindMediaShows('family guy')">
       <img id="uploadposter" src="showImages/uploadposter.webp" onclick="quickFindMediaShows('upload')">
       <img id="therookieposter" src="showImages/therookieposter.jpg" onclick="quickFindMediaShows('the rookie')">
       <img id="carmensandiegoposter" src="showImages/carmensandiegoposter.jpg" onclick="quickFindMediaShows('carmen sandiego')">
+      <img id="demonslayerposter" src="showImages/demonslayerposter.jpg" onclick="quickFindMediaShows('demon slayer')">
       </div>
-      <h2 id="divchildmovietextparent">movies (click) →</h2>
-      <div id="divchildmovies" class="hidden">
+      <h2 id="divchildmovietextparent">movies (click) ↓</h2>
+      <div id="divchildmovies">
         <img id="kpopdemonhuntersposterposter" src="movieimages/kpopdemonhuntersposter.webp" onclick="quickFindMediaMovies('kpop demon hunters')">
         <img id="starwarsepisodeivanewhopeposter" src="movieimages/starwarsepisodeivanewhope.jpg" onclick="quickFindMediaMovies('Star Wars: Episode IV - A New Hope')">
         <img id="kingsmanthesecretserviceposter" src="movieimages/kingsmanthesecretserviceposter.jpg" onclick="quickFindMediaMovies('kingsman: the secret service')">
