--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     ></iframe>
     <br>
     <button id="optionsButton" onclick="quickFind()">Quick Find</button>
-    <div class="hidden" id="quickFindOptionsDiv">
+    <div id="quickFindOptionsDiv">
       <h2 id="divchildshowtextparent">shows (click) ↓</h2>
       <div id="divchildshows">
       <img id="familyguyposter" src="showImages/familyguyposter.jpg" onclick="quickFindMediaShows('family guy')">
@@ -64,4 +64,5 @@
     <button id="addToQuickFindButton" onclick="addToQuickFind()">send feedback</button>
 
   </body>
+
 </html>
