--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <img id="starwarsepisodeivanewhopeposter" src="movieimages/starwarsepisodeivanewhope.jpg" onclick="quickFindMediaMovies('Star Wars: Episode IV - A New Hope')">
         <img id="kingsmanthesecretserviceposter" src="movieimages/kingsmanthesecretserviceposter.jpg" onclick="quickFindMediaMovies('kingsman: the secret service')">
         <img id="bladerunner2049poster" src="movieimages/bladerunner2049poster.jpg" onclick="quickFindMediaMovies('Blade Runner 2049')">
+        <img id="howtotrainyourdragonposter" src="movieimages/howtotrainyourdragonposter.jpg" onclick="quickFindMediaMovies('how to train your dragon')">
+        <img id="howtotrainyourdragon2poster" src="movieimages/httyd2poster.jpeg" onclick="quickFindMediaMovies('how to train your dragon 2')">
+        <img id="HowtoTrainYourDragonTheHiddenWorldposter" src="movieimages/httyd3poster.jpg" onclick="quickFindMediaMovies('How to Train Your Dragon: The Hidden World')">
       </div>
     </div>
     <br>
@@ -64,5 +67,4 @@
     <button id="addToQuickFindButton" onclick="addToQuickFind()">send feedback</button>
 
   </body>
-
 </html>
