added two movies and a show to quick find

--- a/index.html
+++ b/index.html
@@ -49,19 +49,21 @@
       <img id="therookieposter" src="showImages/therookieposter.jpg" onclick="quickFindMediaShows('the rookie')">
       <img id="carmensandiegoposter" src="showImages/carmensandiegoposter.jpg" onclick="quickFindMediaShows('carmen sandiego')">
       <img id="demonslayerposter" src="showImages/demonslayerposter.jpg" onclick="quickFindMediaShows('demon slayer')">
+      <img id="doctorwhoposter" src="showImages/doctorwhoposter.jpg" onclick="quickFindMediaShows('doctor who')">
       </div>
       <h2 id="divchildmovietextparent">movies (click) ↓</h2>
       <div id="divchildmovies">
         <img id="kpopdemonhuntersposterposter" src="movieimages/kpopdemonhuntersposter.webp" onclick="quickFindMediaMovies('kpop demon hunters')">
         <img id="starwarsepisodeivanewhopeposter" src="movieimages/starwarsepisodeivanewhope.jpg" onclick="quickFindMediaMovies('Star Wars: Episode IV - A New Hope')">
         <img id="kingsmanthesecretserviceposter" src="movieimages/kingsmanthesecretserviceposter.jpg" onclick="quickFindMediaMovies('kingsman: the secret service')">
+        <img id="kingsmanthegoldencircleposter" src="movieimages/kingsmanthegoldencircleposter.jpg" onclick="quickFindMediaMovies('kingsman: the golden circle')">
+        <img id="bladerunnerposter" src="movieimages/bladerunnerposter.jpg" onclick="quickFindMediaMovies('Blade Runner')">
         <img id="bladerunner2049poster" src="movieimages/bladerunner2049poster.jpg" onclick="quickFindMediaMovies('Blade Runner 2049')">
         <img id="howtotrainyourdragonposter" src="movieimages/howtotrainyourdragonposter.jpg" onclick="quickFindMediaMovies('how to train your dragon')">
         <img id="howtotrainyourdragon2poster" src="movieimages/httyd2poster.jpeg" onclick="quickFindMediaMovies('how to train your dragon 2')">
         <img id="HowtoTrainYourDragonTheHiddenWorldposter" src="movieimages/httyd3poster.jpg" onclick="quickFindMediaMovies('How to Train Your Dragon: The Hidden World')">
       </div>
     </div>
-    <br>
     <br>
     <textarea id="feedback" placeholder='Type your feedback, quick add suggestions and more here (emails are checked frequently)'></textarea>
     <button id="addToQuickFindButton" onclick="addToQuickFind()">send feedback</button>
