--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <img id="howtotrainyourdragonposter" src="movieimages/howtotrainyourdragonposter.jpg" onclick="quickFindMediaMovies('how to train your dragon')">
         <img id="howtotrainyourdragon2poster" src="movieimages/httyd2poster.jpeg" onclick="quickFindMediaMovies('how to train your dragon 2')">
         <img id="HowtoTrainYourDragonTheHiddenWorldposter" src="movieimages/httyd3poster.jpg" onclick="quickFindMediaMovies('How to Train Your Dragon: The Hidden World')">
+        <img id="bringherbackposter" src="movieimages/bringherbackposter.jpeg" onclick="quickFindMediaMovies('bring her back')">
+        bring her back
       </div>
     </div>
     <br>
