added and fixed local storage functionalities

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       allowfullscreen
     ></iframe>
     <br>
+    <button id="clearLocalStorageButton" onclick="clearLocalStorage()">clear cookies</button>
+    <br>
     <button id="optionsButton" onclick="quickFind()">Quick Find</button>
     <div id="quickFindOptionsDiv">
       <h2 id="divchildshowtextparent">shows (click) ↓</h2>
@@ -82,6 +84,5 @@
     <br>
     <textarea id="feedback" placeholder='Type your feedback, quick add suggestions and more here (emails are checked frequently)'></textarea>
     <button id="addToQuickFindButton" onclick="addToQuickFind()">send feedback</button>
-
   </body>
 </html>
