added a site footer + tweaked some theme settings

--- a/index.html
+++ b/index.html
@@ -86,4 +86,7 @@
     <button id="sendFeedbackButton" onclick="addToQuickFind()">send feedback</button>
     <button id="permaAcknowledgeButton" onclick="permaAcknowledge()"> permanently acknowledge adblocker warning </button>
   </body>
+  <footer id="pageFooter" onclick="footerClick()">
+    <p id="footerText">website made by <a class="repoLink" href="https://github.com/absurd-oliver/">absurdoliver</a> and hosted on github in <a class="repoLink" href="https://github.com/absurd-oliver/Display_Show-Movie">this repository</a></p>
+  </footer>
 </html>
