added pink theme and tweaked some stuff

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       <input type="number" id="seasonInput" min="1" placeholder="Season" class="segoeUIfont"/>
       <input type="number" id="episodeInput"  min="1" placeholder="Episode" class="segoeUIfont"/>
     </div>
-    <label><input type="checkbox" id="themeToggle" />Light Theme</label>
+    <div>
+      <label><input type="checkbox" id="themeToggle" />Light Theme</label>
+      <label><input type="checkbox" id="themeTogglePink" />Pink Theme</label>
+    </div>
     <select id="fontSelect" class="segoeUIfont">
       <option id="fontOption1" value="0">Segoe UI</option>
       <option id="fontOption2" value="1">Cursive</option>
