--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <img id="demonslayerposter" src="showImages/demonslayerposter.jpg" onclick="quickFindMediaShows('demon slayer')">
       <img id="doctorwhoposter" src="showImages/doctorwhoposter.jpg" onclick="quickFindMediaShows('doctor who')">
       <img id="kcUndercoveposter" src="showImages/kcUndercoverposter.jpg" onclick="quickFindMediaShows('kc undercover')">
+      <img id="doctorhouseposter" src="showImages/housemdposter.jpg" onclick="quickFindMediaShows('house')"/>
       </div>
       <h2 id="divchildmovietextparent">movies (click) ↓</h2>
       <div id="divchildmovies">
@@ -92,4 +93,5 @@
   <footer id="pageFooter" onclick="footerClick()">
     <p id="footerText">website made by <a class="repoLink" href="https://github.com/absurd-oliver/">absurdoliver</a> and hosted on github in <a class="repoLink" href="https://github.com/absurd-oliver/Display_Show-Movie">this repository</a></p>
   </footer>
+
 </html>
