--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="feedback.js" defer></script>
   </head>
   <body class="unclickable">
+    <button id="redirectButton" onclick="redirect()">go back to landing page</button>
     <div id="adsWarning" class="clickable">
     <br>
     <p>
