--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <input type="number" id="seasonInput" min="1" placeholder="Season" class="segoeUIfont"/>
       <input type="number" id="episodeInput"  min="1" placeholder="Episode" class="segoeUIfont"/>
     </div>
+        <div>
+      <button id='prevButton'>previous episode</button>
+      <button id='nextButton'>next episode</button>
+    </div>
     <div>
       <label><input type="checkbox" id="themeToggle" />Light Theme</label>
       <label><input type="checkbox" id="themeTogglePink" />Pink Theme</label>
@@ -100,4 +104,5 @@
   </a>
 </footer>
 </html>
+
 
